--- a/recipes/pineapple_juice.html
+++ b/recipes/pineapple_juice.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pineapple Juice</title>
+    <style>
+        body{
+            font-family:Arial,Helvetica,sans-serif;
+            background-color:aquamarine;
+            max-width: 300;
+        }
+        img{
+        height:auto;
+        width:100%;
+       }
+       
+
+    </style>
 </head>
 <body>
     <h1>Pineapple Juice with mint</h1>
