--- a/recipes/rasgulla.html
+++ b/recipes/rasgulla.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rasgulla</title>
+    <style>
+        body{
+            font-family:Arial,Helvetica,sans-serif;
+            background-color:aquamarine;
+            max-width: 300;
+        }
+        img{
+        height:auto;
+        width:100%;
+       }
+       
+
+    </style>
 </head>
 <body>
     <h1> Rasgulla Recipe</h1>
